@@ -1,6 +1,6 @@
 # ----------------------------------------------------------------
     use strict;
-    use Test::More tests => 10;
+    use Test::More tests => 11;
     BEGIN { use_ok('XML::FeedPP') };
 # ----------------------------------------------------------------
     my $map = {
@@ -14,6 +14,8 @@
         "2007-08-09T10:11:12.13+14:30"  =>  "2007-08-09T10:11:12+14:30",
         # invalid - http://portal.nifty.com/rss/headline.rdf
         "2000-01-02T03:04:05:+09:00"    =>  "2000-01-02T03:04:05+09:00",
+	# invalid - http://www.cnc.co.jp/news/xml/rss.xml
+	"2008-03-24T16:54:33 +0900"     =>  "2008-03-24T16:54:33+09:00",
     };
 # ----------------------------------------------------------------
     my $rss = XML::FeedPP::RSS->new();
